--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -7,9 +7,17 @@ jobs:
     runs-on: ubuntu-latest
 
     strategy:
+      fail-fast: false
       matrix:
         node: ['12', '14']
         rabbit: ['3.6', '3.7', '3.8']
+        include:
+          - node: '12'
+            rabbit: '3.6'
+            publish: true
+            continue-on-error: false
+
+    continue-on-error: ${{ matrix.continue-on-error == true }}
 
     services:
       rabbitmq:
@@ -42,7 +50,7 @@ jobs:
           AMQP_DSN: amqp://127.0.0.1:${{ job.services.rabbitmq.ports[5672] }}/
 
       - name: Publish to npmjs
-        if: "matrix.node == '12' && matrix.rabbit == '3.6' && startsWith(github.ref, 'refs/tags/')"
+        if: "matrix.publish == true && startsWith(github.ref, 'refs/tags/')"
         run: |
           echo "//registry.npmjs.org/:_authToken=${NPM_REGISTRY_AUTH_TOKEN}" > .npmrc
           npm version --no-git-tag-version ${GITHUB_REF/refs\/tags\//}
