--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   rabbitmq:
-    image: rabbitmq:3.6-management-alpine
+    image: rabbitmq:3.6-management
     # ports: ['15672:15672']
     logging:
       options:
