--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,7 +10,7 @@ jobs:
       fail-fast: false
       matrix:
         node: ['12', '14']
-        rabbit: ['3.6', '3.7', '3.8']
+        rabbit: ['3.6', '3.8']
         include:
           - node: '12'
             rabbit: '3.6'
