--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,15 +1,6 @@
 {
+  "extends": "@tsconfig/node12",
   "compilerOptions": {
-    "composite": true,
-    "incremental": true,
-    "esModuleInterop": true,
-    "experimentalDecorators": true,
-    "sourceMap": true,
-    "strict": true,
-    "moduleResolution": "Node",
-    "lib": ["ES2019"],
-    "target": "ES2019",
-    "module": "CommonJS",
     "rootDir": "src",
     "outDir": "dist/cjs",
     "declaration": true,
