--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,5 +1,7 @@
-enableTelemetry: false
+yarnPath: ".yarn/releases/yarn-2.2.2.cjs"
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
+
+enableTelemetry: false
