--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,9 @@ jobs:
       - name: Publish to npmjs
         if: "matrix.publish == true && startsWith(github.ref, 'refs/tags/')"
         run: |
-          npm version --no-git-tag-version ${GITHUB_REF/refs\/tags\//}
+          echo ${GITHUB_REF}
+          echo ${GITHUB_REF#refs/tags/}
+          npm version --no-git-tag-version ${GITHUB_REF#refs/tags/}
           yarn npm publish --tolerate-republish --access public
         env:
           YARN_NPM_AUTH_TOKEN: ${{ secrets.NPM_REGISTRY_AUTH_TOKEN }}
