--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,7 +1,7 @@
-yarnPath: ".yarn/releases/yarn-2.2.2.cjs"
+enableTelemetry: false
 
 plugins:
   - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
     spec: "@yarnpkg/plugin-interactive-tools"
 
-enableTelemetry: false
+yarnPath: .yarn/releases/yarn-2.3.0.cjs
